infrastructure/base/apps/apicurio-studio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apicurio-studio
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: v1.31
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/audit-version: v1.31
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/warn-version: v1.31
