infrastructure/base/apps/apicurio-studio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apicurio-studio-ui
  namespace: apicurio-studio
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - apicurio-studio.${DOMAIN}
    secretName: apicurio-studio-tls
  rules:
  - host: apicurio-studio.${DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apicurio-studio-ui
            port:
              number: 8080
